namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: bitwarden
  labels:
    name: bitwarden
