deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  template:
    spec:
      containers:
      - name: bitwarden
        image: vaultwarden/server
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
      volumes:
      - name: bitwarden-data
        persistentVolumeClaim:
          claimName: bitwarden-data
