service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-service
  namespace: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - name: bitwarden-port
      port: 8092
      targetPort: 80
